# virtual-device

./: .gitignore  Cargo.toml  README.md
config/: config.toml  device.json  device.toml  device.yaml  profile.json
examples/: eunm_newtpe_ref_sturct.rs
src/: main.rs
src/config/: device_profile.rs  mod.rs
src/device/: cpu.rs  device_profile.rs  device_profile_impl.rs  flash.rs  mod.rs
src/reporter/: mod.rs
src/reporter/kafka/: kafka_reporter.rs  mod.rs
src/resource/: mod.rs  resource_float.rs  resource_int.rs  types.rs
src/upstream/: mod.rs
src/upstream/kafka/: kafka_upstream.rs  mod.rs  utils.rs
src/virtualdevice/: cpu.rs  flash.rs  mod.rs
