[package]
name = "virtual-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.72"
toml = "0.5.9"
clap = "3.0.0-rc.4"
rand = "0.8.5"
rdkafka = { version = "0.25", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }